--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,7 +1,13 @@
+/* Variables */
+$nav-link-color: #000000;
+
+
+
+
 /* Main class */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: #BCAB79;
   transition: all 0.3s ease;
   display: flex;
   height: 70px;
@@ -128,4 +134,16 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+#logo{
+  width: 50%;
+}
+.nav-link {
+  font-weight: lighter;
+  color: $nav-link-color;
+}
+.nav-link:hover{
+  font-style: underline;
+  color: $nav-link-color;
 }
