--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -17,11 +17,11 @@
     <% if current_user %>
       <div class="navbar-wagon-item">
        <div class="dropdown">
-        <%= link_to current_user.email, {class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle": "dropdown" } %>
-        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
-        </ul>
+          <%=  image_tag current_user.facebook_picture_url || "Welcome #{current_user.first_name}", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", 'data-toggle': 'dropdown'  %>
+          <ul class= "dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li><%= link_to "Dashboard", root_path %></li>
+            <li><%= link_to "LogOut", destroy_user_session_path %></li>
+          </ul>
       </div>
      </div>
       <% else %>
