--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,3 +10,17 @@
    height: 600px;
    margin: 10px 0;
 } 
+
+.search{
+	color: #5D5858;
+	padding: 10px;
+
+}
+.search input{
+	border: 4px solid white;
+	padding: 10px;
+	border-radius: 10px;
+	opacity: 0.5;
+	width: 40%;
+}
+
