--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,45 @@
 
 <h1>Books</h1>
 
+<div class="container">
+  <div class="row">
+    <div class="col-xs-9 col-sm-6 col-md-5">
+      <div class="book-card">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Some stuff</h2>
+          <p>Very cool stuff, useful and smart</p>
+        </div>
+        <img class="card-user avatar" src="user.jpg">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <div class="col-xs-9 col-sm-6 col-md-5">
+      <div class="book-card">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Some stuff</h2>
+          <p>Very cool stuff, useful and smart</p>
+        </div>
+        <img class="card-user avatar" src="user.jpg">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <!-- <div class="col-xs-9 col-sm-6 col-md-4">
+      <div class="book-card">
+        <div class="card-category">Popular</div>
+        <div class="card-description">
+          <h2>Some stuff</h2>
+          <p>Very cool stuff, useful and smart</p>
+        </div>
+        <img class="card-user avatar" src="user.jpg">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div> -->
+  </div>
+</div>
+
+<!--
 <table>
   <thead>
     <tr>
@@ -40,4 +79,4 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_book_path %> -->
