--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,25 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.jumbotron{
+   background-image: linear-gradient(rgba(41,120,160,0.3), rgba(41,120,160,0.2)), asset_url('jumbotron.jpg');
+   background-size: cover;
+   background-position: center;
+   color: white;
+   height: 600px;
+   margin: 10px 0;
+} 
+
+.search{
+	color: #5D5858;
+	padding: 10px;
+
+}
+.search input{
+	border: 4px solid white;
+	padding: 10px;
+	border-radius: 10px;
+	opacity: 0.5;
+	width: 40%;
+}
+
