--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron">
+	<div class="text-center">
+		<h1>Welcome to Booktrader</h1>
+		<h4>Skip the bookstore.  Get textbooks from students</h4>
+	</div>
+	<%= form_tag('/books') do -%>
+  		<div class="search text-center">
+  			<%= text_field_tag :title, "Search for your book title" %>
+  		</div>
+	<% end -%>
+</div>
