--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -19,8 +19,8 @@
       <a href="#"><i class="fa fa-linkedin"></i></a>
     </div>
   </div>
-
-  <div class="col-md-4 col-md-offset-8">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
     <div class="footer-right">
       <p>Contact Us</p>
       <form action= "#" method="post">
