fixed the height and hover effect of the footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,16 +7,15 @@
       <a href="#">About</a>
       <a href="#">Search</a>
       <a href="#">Privacy</a>
-      <a href="#">Contact</a>
     </ul>
 
 <!--   <div class="footer-left">
     <p class="footer-company-name">BookTrader Ltd @ 2017</p> -->
 
     <div class="footer-icons">
-      <a href="#"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-twitter"></i></a>
-      <a href="#"><i class="fa fa-linkedin"></i></a>
+      <a href="#"><i class="fa fa-facebook footer-icon"></i></a>
+      <a href="#"><i class="fa fa-twitter footer-icon"></i></a>
+      <a href="#"><i class="fa fa-linkedin footer-icon"></i></a>
     </div>
   </div>
   <div class="col-md-4"></div>
