--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -12,7 +12,7 @@
   width: 100%;
   font: bold 14px sans-serif;
   text-align: left;
-  padding: 50px 60px 40px;
+  padding: 10px 60px 10px;
   margin-top: 80px;
   overflow: hidden;
 }
@@ -75,6 +75,12 @@
 
 .footer-distributed .footer-icons{
   margin-top: 40px;
+  .footer-icon {
+    color: #1f293a;
+    &:hover {
+      color: white;
+    }
+  }
 }
 
 .footer-distributed .footer-icons a{
@@ -92,6 +98,7 @@
 
   margin-right: 3px;
   margin-bottom: 5px;
+
 }
 
 /* Footer Right */
@@ -148,13 +155,13 @@
 
 
 .footer-distributed form input{
-  height: 55px;
-  margin-bottom: 15px;
+  height: 5px;
+  margin-bottom: 5px;
 }
 
 .footer-distributed form textarea{
-  height: 100px;
-  margin-bottom: 20px;
+  height: 50px;
+  margin-bottom: 15px;
 }
 
 .footer-distributed form button{
@@ -162,7 +169,7 @@
   background-color:  #33383b;
   color: #ffffff;
   border: 0;
-  padding: 15px 50px;
+  padding: 15px 30px;
   font-weight: bold;
   float: right;
 }
