--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,43 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Books</h1>
+<div class="container">
+<%= render 'filter-sidebar' %>
+	
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Edition</th>
-      <th>Condition</th>
-      <th>Price</th>
-      <th>Class</th>
-      <th>Description</th>
-      <th>Sold</th>
-      <th>Purchase</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.edition %></td>
-        <td><%= book.condition %></td>
-        <td><%= book.price %></td>
-        <td><%= book.class %></td>
-        <td><%= book.description %></td>
-        <td><%= book.sold %></td>
-        <td><%= book.purchase %></td>
-        <td><%= book.user %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 
 <%= link_to 'New Book', new_book_path %>
