labeled and styled

--- a/app/assets/stylesheets/books/_filter-sidebar.scss
+++ b/app/assets/stylesheets/books/_filter-sidebar.scss
@@ -7,6 +7,10 @@
 	margin: 10px;
 	padding: 3px 0px;
 }
+.field p{
+	color: white;
+	font-weight: bold;
+}
 
 .filter{
 	border-top: 2px solid #BCAB79;
