--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,49 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
-
-<p>
-  <strong>Edition:</strong>
-  <%= @book.edition %>
-</p>
-
-<p>
-  <strong>Condition:</strong>
-  <%= @book.condition %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @book.price %>
-</p>
-
-<p>
-  <strong>Class:</strong>
-  <%= @book.class %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @book.description %>
-</p>
-
-<p>
-  <strong>Sold:</strong>
-  <%= @book.sold %>
-</p>
-
-<p>
-  <strong>Purchase:</strong>
-  <%= @book.purchase %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @book.user %>
-</p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
+<h1>Books Go Here</h1>
+<% @books.each do |book| %>
+  <p><%= book.title %></p>
+<% end %>
