--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -5,6 +5,11 @@
   left: 0;
 }
 
+.row{
+    display: flex;
+    justify-content: space-between;
+}
+
 .footer-distributed{
   background-color: #2f70a3;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
