--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -18,8 +18,7 @@
       <a href="#"><i class="fa fa-linkedin footer-icon"></i></a>
     </div>
   </div>
-  <div class="col-md-4"></div>
-  <div class="col-md-4">
+  <div class="col-md-4 col-md-offset-4">
     <div class="footer-right">
       <p>Contact Us</p>
       <form action= "#" method="post">
