--- a/app/views/books/_filter-sidebar.html.erb
+++ b/app/views/books/_filter-sidebar.html.erb
@@ -2,31 +2,40 @@
 	<%= form_tag books_path, method: :get do -%>
 	<div class="row">
 		<div class= "field">
-			<p>University:</p> <%= select_tag :university, options_from_collection_for_select(@universities, 'id', 'university', params[:university]) %>
+			<p>University:</p>
+			<%= select_tag :university, options_from_collection_for_select(
+					@universities, 'id', 'university', params[:university]) %>
 		</div>
 	</div>
 	<div class="row">
 		<div class= "field">
 			<p>Edition:</p>
-			<%= select_tag :edition, options_from_collection_for_select(@books, 'id', 'edition', params[:edition]) %>
+			<%= select_tag :edition, options_from_collection_for_select(
+					Book.all.to_a.uniq(&:edition).sort_by(&:edition),
+					'id', 'edition', params[:edition]) %>
 		</div>
 	</div>
 	<div class="row">
 		<div class= "field">
 			<p>Condition:</p>
-			<%= select_tag :condition, options_from_collection_for_select(@books, 'id', 'condition', params[:condition]) %>
+			<%= select_tag :condition, options_from_collection_for_select(
+					Book.all.to_a.uniq(&:condition).sort_by(&:condition),
+					'id', 'condition', params[:condition]) %>
 		</div>
 	</div>
 	<div class="row">
 		<div class= "field">
 			<p>Subject:</p>
-			<%= select_tag :subject, options_from_collection_for_select(@books, 'id', 'subject', params[:subject]) %>
+			<%= select_tag :subject, options_from_collection_for_select(
+					Book.all.to_a.uniq(&:subject).sort_by(&:subject),
+					'id', 'subject', params[:subject]) %>
 		</div>
 	</div>
 	<div class="row">
 		<div class= "field">
 			<p>Price:</p>
-			<%= select_tag :price, options_from_collection_for_select(@books, 'id', 'price', params[:price]) %>
+			<%= select_tag :price, options_from_collection_for_select(
+			@books.uniq(&:price).sort_by(&:price), 'id', 'price', params[:price]) %>
 		</div>
 	</div>
 	<div class="row">
