--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,88 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Books</h1>
-<div class="container">
-<%= render 'filter-sidebar' %>
-	
-</div>
-
-<div class="container col-md-9">
+<h1>Results for <%= params[:title] %></h1>
+<div class="results">
   <div class="row">
+    <div class="col-md-10">
 
-    <% @books.each do |book| %>
-      <%= link_to "/books/#{book.title.gsub(' ', '_')}", method: 'get' do %>
-        <div class="col-xs-6 col-sm-4">
-          <div class="book-card">
-            <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
-            <div class="card-description">
-              <h2><%= book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %></h2>
-              <p><%= book.publisher %></p>
+      <% @books.each do |book| %>
+        <%= link_to "/books/#{book.title.gsub(' ', '_')}", method: 'get' do %>
+          <div class="col-xs-6 col-sm-4">
+            <div class="book-card">
+              <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
+              <div class="card-description">
+                <h2><%= book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %></h2>
+                <p><%= book.publisher %></p>
+              </div>
+              <a class="card-link" href="#" ></a>
             </div>
-            <a class="card-link" href="#" ></a>
           </div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
-
-    <!-- <div class="col-xs-12 col-sm-6">
-      <div class="book-card">
-        <div class="card-category">Popular</div>
-        <div class="card-description">
-          <h2>Some stuff</h2>
-          <p>Very cool stuff, useful and smart</p>
-        </div>
-        <img class="card-user avatar" src="user.jpg">
-        <a class="card-link" href="#" ></a>
-      </div>
-    </div> -->
+    </div>
+    <div class="sidebar col-md-2">
+      <%= render 'filter-sidebar' %>
+    </div>
   </div>
 </div>
-
-<!-- <div class="col-xs-9 col-sm-6 col-md-2">
-  <div class="book-card">
-    <div class="card-category">Popular</div>
-    <div class="card-description">
-      <h2>Some stuff</h2>
-      <p>Very cool stuff, useful and smart</p>
-    </div>
-    <img class="card-user avatar" src="user.jpg">
-    <a class="card-link" href="#" ></a>
-  </div>
-</div> -->
-
-<!--
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Edition</th>
-      <th>Condition</th>
-      <th>Price</th>
-      <th>Class</th>
-      <th>Description</th>
-      <th>Sold</th>
-      <th>Purchase</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.edition %></td>
-        <td><%= book.condition %></td>
-        <td><%= book.price %></td>
-        <td><%= book.class %></td>
-        <td><%= book.description %></td>
-        <td><%= book.sold %></td>
-        <td><%= book.purchase %></td>
-        <td><%= book.user %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
