--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,19 +3,20 @@
 <h1>Books</h1>
 <div class="container">
 <%= render 'filter-sidebar' %>
-	
+
 </div>
 
 <div class="container col-md-9">
   <div class="row">
 
     <% @books.each do |book| %>
-      <%= link_to "/books/#{book.title.gsub(' ', '_')}", method: 'get' do %>
+			<% title = book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %>
+      <%= link_to "/books/#{title.gsub(' ', '_')}", method: 'get' do %>
         <div class="col-xs-6 col-sm-4">
           <div class="book-card">
             <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
             <div class="card-description">
-              <h2><%= book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %></h2>
+              <h2><%= title %></h2>
               <p><%= book.publisher %></p>
             </div>
             <a class="card-link" href="#" ></a>
