DONT OVERWITE THE ROW CLASS

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer-distributed">
-<div class="row">
+<div class="foot-row">
   <div class="col-md-4">
     <h3>BookTrader<span></span></h3>
     <ul class="footer-left">
