--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -21,7 +21,7 @@
           <% end %>
         </div>
      </div>
-      <div class="sidebar col-md-2">
+      <div class="sidebar col-md-2 hidden-sm hidden-xs">
          <%= render 'filter-sidebar' %>
       </div>
   </div>
