--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,53 @@
-<h1>Books Go Here</h1>
-<% @books.each do |book| %>
-  <p><%= book.title %></p>
-<% end %>
+<div class="result">
+	<div class="row">
+		<div class="col-md-5 book-details">
+			<div class="cover">
+			<!-- @books[0].cover, {class: "book-cover", id: "cover"} || -->
+				<%= image_tag "100x100.png" %>
+			</div>
+			<div class="details">
+				<ul>
+					<li class="title"><%= @books[0].title %></li>
+					<li class="other"><%= @books[0].publisher %></li>
+					<li class="other">ISBN:<%= @books[0].isbn %></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col-md-5">
+			<h2>Filters:</h2>
+		</div>
+		<div class="sidebar col-md-2">
+			<%= render "filter-sidebar" %>
+		</div>
+	</div>
+	<div class="row">
+		<% @books.each do |book| %>
+		<div class="col-md-12 list-card">
+			<div class="row">
+			<div class="price col-md-1">
+  				<p>$<%= book.price %></p>
+			</div>
+			<div class="seller col-md-1">
+				<p>Sold by:</p>
+				<%= image_tag book.user.facebook_picture_url || "100x100.png", class: "avatar" %>
+			</div>
+			<div class="university col-md-2">
+				University:
+				<p><%= book.user.university %></p>
+			</div>
+			<div class="condition col-md-1">
+				<p>Condition:</p>
+				<%= book.condition %>
+			</div>
+			<div class="description col-md-3">
+				<p>Description</p>
+				<%= book.description %>
+			</div>
+			<div class="buy col-md-2">
+				<div class="btn btn-primary">Buy</div>
+			</div>
+			</div>
+		</div>
+		<% end %>
+	</div>
+</div>
