styled front page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-	<div class="text-center">
+	<div class="text-center welcome">
 		<h1>Welcome to Booktrader</h1>
 		<h4>Skip the bookstore.  Get textbooks from students</h4>
 	</div>
