--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,13 +7,13 @@
    background-size: cover;
    background-position: center;
    color: white;
-   height: 600px;
-   margin: 10px 0;
+   height: 800px;
 } 
 
 .search{
 	color: #5D5858;
 	padding: 10px;
+	margin-top: 100px;
 
 }
 .search input{
@@ -22,5 +22,8 @@
 	border-radius: 10px;
 	opacity: 0.5;
 	width: 40%;
+}
+.welcome{
+	margin-top: 100px;
 }
 
