--- a/app/views/books/_filter-sidebar.html.erb
+++ b/app/views/books/_filter-sidebar.html.erb
@@ -1,45 +1,45 @@
 	<%= form_tag books_path, method: :get do -%>
-	<div class="row">
+	<!-- <div class="row">
 		<div class= "field">
 			<p>University:</p>
-			<%= select_tag :university, options_from_collection_for_select(
-					@universities, 'id', 'university', params[:university]) %>
+			<%#= select_tag :university, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+					@universities, 'university', 'university', params[:university]) %>
 		</div>
-	</div>
+	</div> -->
 	<div class="row">
 		<div class= "field">
 			<p>Edition:</p>
-			<%= select_tag :edition, options_from_collection_for_select(
-					Book.all.to_a.uniq(&:edition).sort_by(&:edition),
-					'id', 'edition', params[:edition]) %>
+			<%= select_tag :edition, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+					@books.uniq(&:edition).sort_by(&:edition),
+					'edition', 'edition', params[:edition]) %>
 		</div>
 	</div>
 	<div class="row">
 		<div class= "field">
 			<p>Condition:</p>
-			<%= select_tag :condition, options_from_collection_for_select(
-					Book.all.to_a.uniq(&:condition).sort_by(&:condition),
-					'id', 'condition', params[:condition]) %>
+			<%= select_tag :condition, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+					@books.uniq(&:condition).sort_by(&:condition),
+					'condition', 'condition', params[:condition]) %>
 		</div>
 	</div>
 	<div class="row">
 		<div class= "field">
 			<p>Subject:</p>
-			<%= select_tag :subject, options_from_collection_for_select(
-					Book.all.to_a.uniq(&:subject).sort_by(&:subject),
-					'id', 'subject', params[:subject]) %>
+			<%= select_tag :subject, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+					@books.uniq(&:subject).sort_by(&:subject),
+					'subject', 'subject', params[:subject]) %>
 		</div>
 	</div>
-	<div class="row">
+	<!-- <div class="row">
 		<div class= "field">
 			<p>Price:</p>
-			<%= select_tag :price, options_from_collection_for_select(
-			@books.uniq(&:price).sort_by(&:price), 'id', 'price', params[:price]) %>
+			<%#= select_tag :price, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+			@books.uniq(&:price).sort_by(&:price), 'price', 'price', params[:price]) %>
 		</div>
-	</div>
+	</div> -->
 	<div class="row">
 		<div class="field filter">
-		    <%= hidden_field_tag params[:title] %>
+		    <%= hidden_field_tag :title, @title %>
 		    <%= submit_tag 'Filter' %>
 		</div>
 	</div>
