fixed some stuff

--- a/app/assets/stylesheets/books/_filter-sidebar.scss
+++ b/app/assets/stylesheets/books/_filter-sidebar.scss
@@ -1,8 +1,7 @@
 .sidebar{
 	background-color: #2978A0;
-	border: 2px solid black;
 	margin-top: 15px;
-
+	box-shadow: 2px 2px 3px #636363;
 }
 .field{
 	margin: 10px;
