adding and editing books possible

--- a/app/views/books/_form_edit.html.erb
+++ b/app/views/books/_form_edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@book, url: "/dashboard") do |f| %>
+<%= simple_form_for(@book, url: "/dashboard/#{book.id}") do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
