--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to (image_tag "logo.png", {class: "navbar-wagon-brand", id: "logo"}), root_path %>
- 
+
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
@@ -9,7 +9,8 @@
     <!-- Profile picture and dropdown -->
     <div class="navbar-wagon-item">
       <% if current_user %>
-        <%= link_to "Sell your books", new_book_path, class: "nav-link" %>
+        <!-- TODO: fix pathing for new book -->
+        <%= link_to "Sell your books", 'dashboard/new', class: "nav-link" %>
       <% else %>
         <%= link_to "Sell your books", new_user_session_path, class: "nav-link" %>
       <% end %>
@@ -19,7 +20,7 @@
        <div class="dropdown">
           <%=  image_tag current_user.facebook_picture_url || "Welcome #{current_user.first_name}", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", 'data-toggle': 'dropdown'  %>
           <ul class= "dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li><%= link_to "Dashboard", root_path %></li>
+            <li><%= link_to "Dashboard", dashboard_path %></li>
             <li><%= link_to "LogOut", destroy_user_session_path %></li>
           </ul>
       </div>
