--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,7 @@
 			<h2>Filters:</h2>
 		</div>
 		<div class="sidebar col-md-2  hidden-sm hidden-xs">
-				<%= form_tag book_path(:id), method: :get do -%>
+				<%= form_tag books_path(:id), method: :get do -%>
 	<!-- <div class="row">
 		<div class= "field">
 			<p>University:</p>
