--- a/app/assets/stylesheets/components/_book-card.scss
+++ b/app/assets/stylesheets/components/_book-card.scss
@@ -3,9 +3,8 @@
   // text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   // background-color: #E8E8E8;
   // background-color: #F6EFEE;
-  background-color: rgba(188, 171, 121, 0.2);
-  border: 1px solid #2978A0;
-  border-radius: 5px;
+  background-color: white;
+  box-shadow: 2px 2px 3px #636363;
   background-size: cover !important;
   color: black;
   display: flex;
