--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,7 +8,7 @@
           <% @books.each do |book| %>
             <div class="col-xs-6 col-sm-4">
             <% title = book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %>
-            <%= link_to "/books/#{title.gsub(' ', '_')}", method: 'get' do %>
+            <%= link_to "/books/list/#{title.gsub(' ', '_')}", method: 'get' do %>
               <div class="book-card">
                 <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
                 <div class="card-description">
@@ -33,7 +33,7 @@
   <div class="row">
     <div class= "field">
       <p>Edition:</p>
-      <%= select_tag :edition, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+      <%= select_tag :edition, content_tag(:option,'Any',:value=>"")+options_from_collection_for_select(
           @books.uniq(&:edition).sort_by(&:edition),
           'edition', 'edition', params[:edition]) %>
     </div>
@@ -41,7 +41,7 @@
   <div class="row">
     <div class= "field">
       <p>Condition:</p>
-      <%= select_tag :condition, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+      <%= select_tag :condition, content_tag(:option,'Any',:value=>"")+options_from_collection_for_select(
           @books.uniq(&:condition).sort_by(&:condition),
           'condition', 'condition', params[:condition]) %>
     </div>
@@ -49,7 +49,7 @@
   <div class="row">
     <div class= "field">
       <p>Subject:</p>
-      <%= select_tag :subject, content_tag(:option,'select one...',:value=>"")+options_from_collection_for_select(
+      <%= select_tag :subject, content_tag(:option,'Any',:value=>"")+options_from_collection_for_select(
           @books.uniq(&:subject).sort_by(&:subject),
           'subject', 'subject', params[:subject]) %>
     </div>
@@ -71,4 +71,3 @@
       </div>
   </div>
 </div>
-
