--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
+@import "pages/devisestyle";
 @import "components/book-card";
 @import "books/filter-sidebar";
 @import "books/index";
