--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -137,7 +137,7 @@ $nav-link-color: #1F1F1F;
 }
 
 #logo{
-  width: 50%;
+  width: 45%;
 }
 .nav-link {
   font-weight: lighter;
@@ -146,4 +146,15 @@ $nav-link-color: #1F1F1F;
 .nav-link:hover{
   font-style: underline;
   color: $nav-link-color;
+}
+.brand{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.brand p{
+  display: inline-block;
+  font-size: 2.25em;
+  padding-top: 5px;
+  margin-left: -40px;
 }
