--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Book</h1>
-
-<%= render 'form', book: @book %>
-
-<%= link_to 'Back', dashboard_path %>
+<div class="container">
+	<h1>New Book</h1>
+	<div class="new-book">
+		<%= render 'form', book: @book %>
+	</div>
+	<div class="row">
+        <div class="col-xs-3 col-md-2 col-md-offset-3">
+			<%= link_to 'Back', dashboard_path %>
+        </div>
+    </div>
+	
+</div>
