--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,8 +1,8 @@
 <!-- TODO: Dummy display, replace with corret -->
-<h2>You are selling:</h2>
 <div class="container">
-  <div class="col-md-10 col-xs-12">
+<h2>You are selling:</h2>
       <div class="row">
+      <div class="col-md-10 col-xs-12 selling">
         <% @user.books.each do |book| %>
           <div class="col-xs-6 col-sm-4">
           <% title = book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %>
