--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -18,7 +18,7 @@
   font: bold 14px sans-serif;
   text-align: left;
   padding: 10px 60px 10px;
-  margin-top: 80px;
+  /* margin-top: 80px; */
   overflow: hidden;
 }
 
