Major style changes on books/show and books/index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import "vendor/index";
 
 // Your CSS
+@import "variables";
 @import "layout/index";
 @import "components/index";
 @import "pages/index";
