--- a/app/assets/stylesheets/books/_filter-sidebar.scss
+++ b/app/assets/stylesheets/books/_filter-sidebar.scss
@@ -2,6 +2,9 @@
 	background-color: #2978A0;
 	margin-top: 15px;
 	box-shadow: 2px 2px 3px #636363;
+	position: fixed;
+	right: 1%;
+
 }
 .field{
 	margin: 10px;
