--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,3 +1,6 @@
+
+$footer_color: #2978A0;
+
 .footer {
   position: absolute;
   right: 0;
@@ -11,7 +14,7 @@
 }
 
 .footer-distributed{
-  background-color: #2f70a3;
+  background-color: $footer_color;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   width: 100%;
@@ -93,7 +96,7 @@
   width: 35px;
   height: 35px;
   cursor: pointer;
-  background-color:  #2f70a3;
+  background-color:  $footer_color;
   border-radius: 2px;
 
   font-size: 20px;
