--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,23 +5,22 @@
 <div class="container">
   <h2>You are selling:</h2>
       <div class="row">
-      <div class="col-md-10 col-xs-12 selling">
         <% @user.books.each do |book| %>
-          <div class="col-xs-6 col-sm-4">
-          <% title = book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %>
-          <%= link_to "/books/#{title.gsub(' ', '_')}", method: 'get' do %>
-            <div class="book-card">
-              <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
+          <div class="col-xs-12 col-sm-4 list-card">
+            
+            <% title = book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %>
+
+            <%= link_to "/books/#{title.gsub(' ', '_')}", method: 'get' do %>
+              <div class="list-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+                url(<%= image_path "100x100.png" || book.cover %>);"></div>
               <div class="card-description">
                 <h2><%= title %></h2>
                 <p><%= link_to "Edit this book", "dashboard/update/#{book.id}" %></p>
-                <p><%= link_to "Remove from store", "dashboard/#{book.id}",
-                                method: :delete, data: { confirm: delete_message } %></p>
-             </div>
-            </div>
-          <% end %>
+                <p><%= link_to "Remove from store", "dashboard/#{book.id}", method: :delete, data: { confirm: delete_message } %></p>
+              </div>
+            <% end %>
+
           </div>
         <% end %>
       </div>
-   </div>
 </div>
