--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,5 @@
 <!-- TODO: Dummy display, replace with corret -->
 
-<% delete_message = "Are you sure? This will remove the book from your dashboard as well."  %>
 
 <div class="container">
   <h2>You are selling:</h2>
@@ -8,18 +7,33 @@
       <div class="col-md-10 col-xs-12 selling">
         <% @user.books.each do |book| %>
           <div class="col-xs-6 col-sm-4">
-          <% title = book.title.strip.gsub(/[[:punct:]]/, ' ').split.map(&:capitalize).join(' ') %>
-          <%= link_to "/books/#{title.gsub(' ', '_')}", method: 'get' do %>
             <div class="book-card">
               <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
               <div class="card-description">
-                <h2><%= title %></h2>
+                <h2><%= book.title %></h2>
                 <p><%= link_to "Edit this book", "dashboard/update/#{book.id}" %></p>
                 <p><%= link_to "Remove from store", "dashboard/#{book.id}",
-                                method: :delete, data: { confirm: delete_message } %></p>
+                                method: :delete, data: { confirm: @delete_message } %></p>
              </div>
             </div>
-          <% end %>
+          </div>
+        <% end %>
+      </div>
+   </div>
+</div>
+<div class="container">
+  <h2>You bought:</h2>
+      <div class="row">
+      <div class="col-md-10 col-xs-12 selling">
+        <% @books_purchased.each do |book| %>
+          <div class="col-xs-6 col-sm-4">
+            <div class="book-card">
+              <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
+              <div class="card-description">
+                <h2><%= book.title %></h2>
+                <p>From: <%= book.user.full_name %></p>
+             </div>
+            </div>
           </div>
         <% end %>
       </div>
