--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/devisestyle";
+@import "pages/dashboard";
 @import "components/book-card";
 @import "books/filter-sidebar";
 @import "books/index";
