--- a/app/assets/stylesheets/books/_show.scss
+++ b/app/assets/stylesheets/books/_show.scss
@@ -3,8 +3,7 @@
 .list-card{
 	height: 600px;
 	margin: 20px 0 20px 20px;
-	border-radius: 7px;
-	box-shadow: 2px 2px 2px #636363;
+	@include default-box-shadow;
 	background-color: white;
 	padding-left: 0px;
 	padding-right: 0px; 
