--- a/app/assets/stylesheets/components/_book-card.scss
+++ b/app/assets/stylesheets/components/_book-card.scss
@@ -17,7 +17,8 @@
 }
 .card-book-picture {
   height:300px;
-  background-size: cover !important
+  background-size: cover !important;
+  background-position: center;
 }
 // .card-user {
 //   right: 20px;
