--- a/app/views/books/_form_edit.html.erb
+++ b/app/views/books/_form_edit.html.erb
@@ -1,18 +1,22 @@
-<%= simple_form_for(@book, url: "/dashboard/#{book.id}") do |f| %>
-  <%= f.error_notification %>
+<div class="row">
+  <div class="form col-xs-12 col-md-6 col-md-offset-3">
+    <%= simple_form_for(@book, url: "/dashboard/#{book.id}") do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :edition %>
-    <%= f.input :condition, collection: ['Poor', 'Fair', 'Good', 'Like New'] %>
-    <%= f.input :price %>
-    <%= f.input :subject %>
-    <%= f.input :description %>
-    <%= f.input :isbn %>
-    <%= f.input :publisher %>
-  </div>
+      <div class="form-inputs">
+        <%= f.input :title %>
+        <%= f.input :edition %>
+        <%= f.input :condition, collection: ['Poor', 'Fair', 'Good', 'Like New'] %>
+        <%= f.input :price %>
+        <%= f.input :subject %>
+        <%= f.input :description %>
+        <%= f.input :isbn %>
+        <%= f.input :publisher %>
+      </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+      <div class="form-actions">
+        <%= f.button :submit %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
