--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
   <%= render 'layouts/shared/navbar' %>
     <%= yield %>
-    <%= render "shared/footer" %>
+  <%= render 'shared/footer' %>
    <!--  <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p> -->
     <%= javascript_include_tag 'application' %>
