--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,13 +1,14 @@
 <!-- TODO: Dummy display, replace with corret -->
 
 
-<div class="container">
+<div class="user-items-container">
   <h2>You are selling:</h2>
       <div class="row">
         <% @user.books.each do |book| %>
-          <div class="col-xs-6 col-sm-4">
+          <div class="col-xs-6 col-sm-3">
             <div class="book-card">
-              <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
+              <div class="card-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+       url(<%= image_path "100x100.png" || book.cover %>);"></div>
               <div class="card-description">
                 <h2><%= book.title %></h2>
                 <p><%= link_to "Edit this book", "dashboard/update/#{book.id}" %></p>
@@ -19,18 +20,18 @@
         <% end %>
       </div>
    </div>
-</div>
-<div class="container">
+<div class="user-items-container">
   <h2>You bought:</h2>
       <div class="row">
-      <div class="col-md-10 col-xs-12 selling">
         <% @books_purchased.each do |book| %>
-          <div class="col-xs-6 col-sm-4">
+          <div class="col-xs-6 col-sm-3">
             <div class="book-card">
-              <div class="card-book-picture"><%= image_tag "100x100.png" %></div>
+              <div class="card-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+       url(<%= image_path "100x100.png" || book.cover %>);"></div>
               <div class="card-description">
                 <h2><%= book.title %></h2>
                 <p>From: <%= book.user.full_name %></p>
+                <p>$<%= book.price %></p>
              </div>
             </div>
           </div>
