--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,3 @@
-<h1>User#welcome</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/welcome.html.erb
+<p>Hello, <%= @user.full_name %>,
+  <p>We are glad you decided to buy and sell your books through BookTrader!</p>
 </p>
