--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -21,7 +21,13 @@
           <%=  image_tag current_user.facebook_picture_url || "Welcome #{current_user.first_name}", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", 'data-toggle': 'dropdown'  %>
           <ul class= "dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li><%= link_to "Dashboard", dashboard_path %></li>
-            <li><%= link_to "Cart", cart_path %></li>
+            <li><%= link_to cart_path do %>
+              <div class="cart-container">
+                <p>Cart</p>
+                <%= @purchases.length if @purchases.length >= 1 %>
+              </div>
+              <% end %>
+            </li>
             <li><%= link_to "Log Out", destroy_user_session_path %></li>
           </ul>
       </div>
