--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,6 +12,8 @@
         <%= f.input :description %>
         <%= f.input :isbn %>
         <%= f.input :publisher %>
+        <%= f.input :photo, as: :attachinary %>
+        <%= f.input :photo_cache, as: :hidden %>
         <%= f.button :submit %>
       </div>
     <% end %>
