small footer fix

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,4 +1,4 @@
-
+ 
 $footer_color: #2978A0;
 
 .footer {
@@ -40,9 +40,9 @@ $footer_color: #2978A0;
   }
 }
 
-.footer-distributed .footer-left{
-  float: left;
-}
+// .footer-distributed .footer-left{
+//   float: left;
+// }
 
 /* The company logo */
 
