--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,21 +1,22 @@
 <footer class="footer-distributed">
-<div class="foot-row">
-  <div class="col-md-4">
-    <h3>BookTrader<span></span></h3>
+<div class="row">
+  <div class="col-md-4 hidden-xs hidden-sm">
     <ul class="footer-left">
-      <a href="#">Home</a>
+     <%= link_to "Home", root_path %>
       <a href="#">About</a>
       <a href="#">Search</a>
       <a href="#">Privacy</a>
     </ul>
 
+    <h3>BookTrader<span></span></h3>
 <!--   <div class="footer-left">
     <p class="footer-company-name">BookTrader Ltd @ 2017</p> -->
 
-    <div class="footer-icons">
-      <a href="#"><i class="fa fa-facebook footer-icon"></i></a>
-      <a href="#"><i class="fa fa-twitter footer-icon"></i></a>
-      <a href="#"><i class="fa fa-linkedin footer-icon"></i></a>
+    <div class="col-md-4 col-xs-12 footer-icons">
+      
+        <a href="#"><i class="fa fa-facebook footer-icon"></i></a>
+        <a href="#"><i class="fa fa-twitter footer-icon"></i></a>
+        <a href="#"><i class="fa fa-linkedin footer-icon"></i></a>
     </div>
   </div>
   <div class="col-md-4 col-md-offset-4">
