show page reflects purchases

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -89,7 +89,7 @@
 			</div>
 			<div class="description">
 				 <p><strong>Description:</strong></p>
-				<p><%= book.description.strip %><p>
+				<p><%= book.description.strip %></p>
 			</div>
 			<div class="buy">
 
@@ -98,5 +98,7 @@
 				<% end %>
 			</div>
 		<% end %>
+	</div>
+</div>
 	</div>
 </div>
