Fixed book displays with cloudinary

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,7 @@
 	<%= form_tag('/books', method: :get) do -%>
   		<div class="search text-center">
   			<%= text_field_tag :title, nil, placeholder: "Search for your book title" %>
+  			<div id="results"></div>
   		</div>
 	<% end -%>
 </div>
