--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,25 +1,28 @@
 <footer class="footer-distributed">
 <div class="row">
-  <div class="col-md-4 hidden-xs hidden-sm">
+  <div class="col-md-4 hidden-xs hidden-sm footer-top-padding">
     <ul class="footer-left">
      <%= link_to "Home", root_path %>
       <a href="#">About</a>
       <a href="#">Search</a>
       <a href="#">Privacy</a>
+      <a href="#">Contact Us</a>
     </ul>
-
-    <h3>BookTrader<span></span></h3>
+    </div>
+    <div class="col-md-4 col-sm-6 text-center">
+      <h3>BookTrader</h3>
+    </div>
 <!--   <div class="footer-left">
     <p class="footer-company-name">BookTrader Ltd @ 2017</p> -->
 
-    <div class="col-md-4 col-xs-12 footer-icons">
+    <div class="col-md-4 col-sm-6 footer-icons">
       
         <a href="#"><i class="fa fa-facebook footer-icon"></i></a>
         <a href="#"><i class="fa fa-twitter footer-icon"></i></a>
         <a href="#"><i class="fa fa-linkedin footer-icon"></i></a>
     </div>
   </div>
-  <div class="col-md-4 col-md-offset-4">
+<!--   <div class="col-md-4 col-md-offset-4">
     <div class="footer-right">
       <p>Contact Us</p>
       <form action= "#" method="post">
@@ -29,8 +32,7 @@
       </form>
     </div>
   </div>
-
-</div>
+ -->
 </footer>
 
 
