--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,3 +11,31 @@
   		</div>
 	<% end -%>
 </div>
+<div class="container landing-info">
+	<div class="row">
+		<div class="col-md-4 col-sm-12 text-center ">
+			<div class="landing-info-card">
+				<%= image_tag "search", class: "info-img"%>
+			 	<div class="how-to">
+			 		<p>Search for your textbooks from a collection of students selling the same book</p>
+			 	</div> 
+			</div>
+		 </div>
+		<div class="col-md-4 col-sm-12 text-center">
+			<div class="landing-info-card">
+				<%= image_tag "shopping-cart", class: "info-img" %>
+				<div class="how-to">
+					<p>Select all the books you need for your classes</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4 col-sm-12 text-center">
+			<div class="landing-info-card">
+				<%= image_tag "old-school", class: "info-img" %> 
+				<div class="how-to"> 
+					<p>Connect on campus with the students selling the textbook you need and go to class!</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
