--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "vendor/index";
+@import url('https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,400,700');
 
 // Your CSS
 @import "variables";
