--- a/app/assets/stylesheets/components/_book-card.scss
+++ b/app/assets/stylesheets/components/_book-card.scss
@@ -14,6 +14,7 @@
   align-content: space-between;
   text-align: center;
   width: 70%;
+  transition: all 0.15s ease;
 }
 .card-book-picture {
   height:300px;
@@ -55,4 +56,7 @@
 }
 .no-txt-deco:hover{
   text-decoration: none;
+}
+.book-card:hover{
+    transform: scale(1.1)
 }
