more frontend changes.  Changes to checkout and footer

--- a/app/assets/stylesheets/books/_filter-sidebar.scss
+++ b/app/assets/stylesheets/books/_filter-sidebar.scss
@@ -20,3 +20,12 @@
 	margin-top: 15px;
 	padding-top: 15px;
 }
+.checkout-sidebar{
+	color: white;
+}
+.checkout-sidebar p{
+	font-size: 2em;
+}
+.checkout-sidebar-button{
+	width: 100%;
+}
