--- a/app/assets/stylesheets/books/_index.scss
+++ b/app/assets/stylesheets/books/_index.scss
@@ -1,4 +1,17 @@
-.results{
-	margin: 0 45px;
-	min-height: 600px;
+// .results{
+// 	margin: 0 45px;
+// }
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -72px; 
+  margin: 0 45px;
+  
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.footer, .page-wrap:after {
+  height: 72px; 
 }
