--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="results">
   <div class="form col-xs-12 col-md-6 col-md-offset-3">
       <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
