--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,9 @@
 	<%= form_tag('/books', method: :get) do -%>
   		<div class="search text-center">
   			<%= text_field_tag :title, nil, placeholder: "Search for your book title" %>
-  			<div id="results"></div>
+  			<%= button_tag(type: "submit", class: "btn btn-default home-search") do %>
+					<span class="glyphicon glyphicon-search icon-large" aria-hidden="true"></span>
+			<% end %>
   		</div>
 	<% end -%>
 </div>
