--- a/app/views/purchases/index_cart.html.erb
+++ b/app/views/purchases/index_cart.html.erb
@@ -6,42 +6,66 @@
 			<p><%= link_to "Continue shopping", root_path %></p>
 		</div>
 		<% else %>
-		<div class="col-xs-12 col-md-6">
+		<div class="col-xs-12 col-md-10">
 			<h2>Your Cart Contains:</h2>
-			<% @purchases.each do |purchase| %>
-			  	<div class="col-xs-12 col-sm-6 col-md-4 list-card">
-					<div class="list-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-					 url('<%= cl_image_path purchase.book.cover_photo, :default_image => "default_image.png" %>')";></div>
-					<div class="avatar-container">
-						<%= image_tag purchase.book.user.facebook_picture_url || "100x100.png", class: "avatar avatar-large" %>
-					</div>
-					<div class="book-info">
-						<div class="price">
-			  				<p>$<%= purchase.book.price %></p>
+			<div class="row">
+				<% @purchases.each do |purchase| %>
+				  	<div class="col-xs-12 col-sm-6 col-md-3 list-card">
+						<div class="list-book-picture" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+						 url('<%= cl_image_path purchase.book.cover_photo, :default_image => "default_image.png" %>')";></div>
+						<div class="avatar-container">
+							<%= image_tag purchase.book.user.facebook_picture_url || "100x100.png", class: "avatar avatar-large" %>
 						</div>
-						<div class="subject">
-							<p><%= purchase.book.subject %></p>
+						<div class="book-info">
+							<div class="price">
+				  				<p>$<%= purchase.book.price %></p>
+							</div>
+							<div class="subject">
+								<p><%= purchase.book.subject %></p>
+							</div>
+						</div>
+					  	<div class="book-details">
+								<div class="university">
+									<p><strong>University:</strong></p>
+									<p><%= purchase.book.user.university %></p>
+								</div>
+								<div class="condition">
+									<p><strong>Condition:</strong></p>
+									<p><%= purchase.book.condition %></p>
+								</div>
+								<div class="description">
+									<p><strong>Description:</strong></p>
+									<p><%= purchase.book.description %></p>
+								</div>
+								<div class="buy">
+									<%= link_to "Remove from Cart", purchases_path(purchase.id), method: :delete, data: {confirm: "Remove this from your cart?"}, class: "btn btn-primary checkout" %>
+								</div>
+					  	</div>
+					</div>
+				<% end %>
+				<div class="sidebar col-md-2 col-xs-12 checkout-sidebar text-center">
+					<div class="row">
+						<div class="field">
+							<h2>Total: $<%= @total %></h2>	
 						</div>
 					</div>
-				  	<div class="book-details">
-							<div class="university">
-								<p><strong>University:</strong></p>
-								<p><%= purchase.book.user.university %></p>
+					<div class="row">
+						<div class="padded field">
+							<%= link_to "Continue shopping", root_path, class: "btn btn-primary"  %>
+						</div>
+					</div>
+					<div class="row">
+						<div class="field">
+							<%= link_to cart_checkout_path, data: {confirm: "Purchase all books for $#{@total}?"} do  %>
+							<div class="btn btn-primary checkout-sidebar-button"> Checkout
 							</div>
-							<div class="condition">
-								<p><strong>Condition:</strong></p>
-								<p><%= purchase.book.condition %></p>
-							</div>
-							<div class="buy">
-								<%= link_to "Remove from Cart", purchases_path(purchase.id), method: :delete, data: {confirm: "Remove this from your cart?"}, class: "btn btn-primary checkout" %>
-							</div>
-				  	</div>
+							<% end %>
+						</div>	
+					</div>
+					
 				</div>
-			<% end %>
+			</div>
 		</div>
 		<% end %>
 	</div>
 </div>
-			<p>Total: $<%= @total %></p>
-			<%= link_to "Continue shopping", root_path %>
-			<%= link_to "Confirm purchase and checkout", cart_checkout_path, data: {confirm: "Purchase all books for $#{@total}?"} %>
