--- a/app/assets/stylesheets/books/_index.scss
+++ b/app/assets/stylesheets/books/_index.scss
@@ -1,17 +1,22 @@
-// .results{
-// 	margin: 0 45px;
-// }
-.page-wrap {
-  min-height: 100%;
-  /* equal to footer height */
-  margin-bottom: -72px; 
-  margin: 0 45px;
-  
+ .results{
+	margin: 0 45px;
+	margin-bottom: 72px;
+	// min-height: 100%;
+	// height: auto !important;
+ //    height: 100%;
 }
-.page-wrap:after {
+// .page-wrap {
+//   min-height: 100%;
+//   /* equal to footer height */
+//   margin-bottom: -72px; 
+//   margin: 0 45px;
+//   // background-color: rgba(188, 171, 121, 0.2);
+  
+// }
+.results:after {
   content: "";
   display: block;
 }
-.footer, .page-wrap:after {
+.footer-distributed, .results:after {
   height: 72px; 
 }
