--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -47,7 +47,7 @@ $nav-link-color: #1F1F1F;
   cursor: pointer;
   padding: 0 20px;
 }
-
+ 
 /* Navbar standard link */
 .navbar-wagon-link {
   color: #616668;
@@ -161,4 +161,23 @@ $nav-link-color: #1F1F1F;
   font-size: 2.25em;
   padding-top: 5px;
   margin-left: -40px;
+}
+
+.search-nav{
+   flex: 0 1 300px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0 10px;
+  position: relative;
+  color: #5D5858;
+  padding: 10px;
+  // width: 100%;
+}
+.search-nav input{
+  border: 4px solid white;
+  padding: 10px;
+  border-radius: 10px;
+
+  opacity: 0.5;
+  width: 100%;
 }
