--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,8 @@
    background-position: center;
    color: white;
    height: 800px;
+   margin-left: -45px;
+   margin-right: -45px;
 } 
 .jumbotron h1{
 	font-size: 8.5em;
@@ -38,7 +40,7 @@
 html, body{
 	background-color: rgba(188, 171, 121, 0.2);
 	// background-color: #F0F0F0;
-	// height: 100%;
+	height: 100%;
 }
 .selling{
 	height: 600px;
