--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   </head>
   <body>
   <%= render 'layouts/shared/navbar' %>
-  <div class="page-wrap">
+<!--   <div class="page-wrap"> -->
     <%= yield %>
-  </div>
+<!--   </div> -->
   <%= render 'shared/footer' %>
    <!--  <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p> -->
