pushing footer changes

--- a/app/assets/stylesheets/books/_index.scss
+++ b/app/assets/stylesheets/books/_index.scss
@@ -1,9 +1,9 @@
  .results{
 	margin: 0 45px;
 	margin-bottom: 72px;
-	// min-height: 100%;
-	// height: auto !important;
- //    height: 100%;
+	min-height: 100%;
+	height: auto !important;
+    height: 100%;
 }
 // .page-wrap {
 //   min-height: 100%;
